# worldmonitor-macos

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  live-channels.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: build-desktop.yml  lint.yml  pages.yml  test-linux-app.yml  typecheck.yml
api/: _api-key.js  download.js  rss-proxy.js
docs/: DOCUMENTATION.md  FEATURE_BACKLOG.md
docs/Docs_To_Review/: ARCHITECTURE.md  COMPONENTS.md  EXTERNAL_APIS.md  PANELS.md
public/map-styles/: satellite.json  terrain.json
scripts/: download-node.sh
src/: App.ts  main.ts  styles.css  terminal.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: local-api-server.mjs  package.json
src-tauri/src/: main.rs
src/app/: data-loader.ts  desktop-updater.ts  event-handlers.ts  panel-layout.ts
src/components/: AlertCenterPanel.ts  CommunityWidget.ts  CryptoPanel.ts  DeckGLMap.ts  DiseaseOutbreakPanel.ts  Header.ts  LiveWebcamsPanel.ts  MacroSignalsPanel.ts  MapPopup.ts  MarketsPanel.ts  NewsPanel.ts  ResourceInventoryPanel.ts  SecurityAdvisoriesPanel.ts  StatusBar.ts  Ticker.ts  UnifiedSettings.ts  VirtualList.ts
src/locales/: ar.json  de.json  el.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  sv.json  th.json  tr.json  vi.json  zh.json
src/services/: CryptoService.ts  MarketService.ts  NewsService.ts  analytics.ts  arrival-choreography.ts  (+5 more)
tests/: crystal-ball-shell-branding.test.mjs
(+11 files in other folders)
