[package]
name = "bloomberg-terminal"
version = "1.0.0"
description = "Bloomberg-style financial terminal"
authors = ["Bradley Bond"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
